respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Warehouse__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier, Customer, Supply Chain Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Warehouses</relationshipLabel>
        <relationshipName>Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account_Owner__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Record Type&quot; inside &quot;Account Owner&quot;</inlineHelpText>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Warehouses</relationshipLabel>
        <relationshipName>Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_WHManager__c</fullName>
        <label>Email Warehouse Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Free_Space_m2__c</fullName>
        <formula>Total_Space_m2__c - Taken_Space_m2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Space (m2)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>$Source.Country__c</field>
                <operation>equals</operation>
                <valueField>Location__c.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.State__c</field>
                <operation>equals</operation>
                <valueField>Location__c.State__c</valueField>
            </filterItems>
            <filterItems>
                <field>Location__c.State__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Warehouses</relationshipLabel>
        <relationshipName>Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outbound_Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outbound Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Inbound Warehouse</relationshipLabel>
        <relationshipName>Inbound_Warehouse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pct_Free_Space__c</fullName>
        <formula>(Total_Space_m2__c - Taken_Space_m2__c) / Total_Space_m2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Free Space</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Taken_Space__c</fullName>
        <formula>Taken_Space_m2__c / Total_Space_m2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Taken Space</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <label>Report Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Country__c</field>
                <operation>equals</operation>
                <valueField>State__c.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Warehouses</relationshipLabel>
        <relationshipName>Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taken_Space_m2__c</fullName>
        <label>Taken Space (m2)</label>
        <summarizedField>Inventory_Entry__c.Total_Surface_m2_Remaining_Units__c</summarizedField>
        <summaryFilterItems>
            <field>Inventory_Entry__c.Remaining_Units__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Inventory_Entry__c.Warehouse__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Space_m2__c</fullName>
        <label>Total Space (m2)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WarehousesExecutive</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Responsable de Almacen en la Zona</inlineHelpText>
        <label>Warehouse Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Warehouse</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>Location__c</columns>
        <columns>Total_Space_m2__c</columns>
        <columns>Taken_Space_m2__c</columns>
        <columns>Pct_Taken_Space__c</columns>
        <columns>Free_Space_m2__c</columns>
        <columns>Pct_Free_Space__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>